--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,4 @@
-@import 'src/variables';
+@import 'src/scss/variables';
 
 
 h1 {
@@ -9,12 +9,12 @@ h1 {
 main {
     
     .ne-klasse-nach-main {
-        color: blue;
+        color: $primaryColor;
         
         .noch-eine {
             display: block;
             font-size: 22px;
-            color: red;
+            color: $secondaryColor;
         }
     }
 }
