--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,30 +1,53 @@
 @import 'src/scss/variables';
 
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 body {
     background-color: #333;
     color: #fff;
+    font-family: 'Roboto', sans-serif;
 }
 
 h1 {
     font-size: 40px;
-    color: $primaryColor;
-}
-
-main {
-    
-    .ne-klasse-nach-main {
-        color: $primaryColor;
-        
-        .noch-eine {
-            display: block;
-            font-size: 22px;
-            color: $secondaryColor;
-        }
-    }
+    color: $primaryFontColor;
+    text-align: center;
 }
 
 #myCanvas {
-    display: block;
-    margin: 50px auto;
+    width: 80vw;
+    height: 60vw;
     background-color: #999;
+    margin-bottom: 20px;
+}
+
+.gallery--container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    padding: 20px;
+    width: 90vw;
+    height: 85vw;
+    border: 1px solid white;
+}
+
+#gallery--thumbs-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80vw;
+    height: 15vw;
+}
+
+.gallery--img {
+    //max-width: 100%;
+    width: 20vw;
+    height: 15vw;
 }
