--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -58,6 +58,13 @@ h1 {
 
 .gal--img {
     width: 20vw;
+    opacity: 0.7;
+    transition: opacity 0.5s ease-in-out;
+    cursor: pointer;
+
+    &:hover {
+        opacity: 1;
+    }
 }
 
 // --------------------------------------------------
