--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -42,13 +42,13 @@ h1 {
     margin-bottom: 20px;
 }
 
-#gal--myCanvas {
+.gal--myCanvas {
     width: 80vw;
     height: auto;
     background-color: #999;
 }
 
-#gal--thumbs-container {
+.gal--thumbs-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -69,4 +69,68 @@ h1 {
 
 // --------------------------------------------------
 // Gallery END
+// --------------------------------------------------
+
+// --------------------------------------------------
+// CSS Gallery
+// --------------------------------------------------
+
+.cgal--container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    padding: 20px;
+    width: 90vw;
+    height: 85vw;
+    border: 1px solid white;
+}
+
+.cgal--canvas-container {
+    display: flex;
+    align-items: flex-end;
+    height: 60vw;
+    width: 80vw;
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.cgal--fullpicture {
+    display: none;
+    width: 80vw;
+    height: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+}
+
+.visible {
+    display: block;
+    opacity: 1;
+}
+
+.cgal--thumbs-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80vw;
+    height: 15vw;
+}
+
+.cgal--img {
+    width: 20vw;
+    opacity: 0.7;
+    transition: opacity 0.5s ease-in-out;
+    cursor: pointer;
+
+    &:hover {
+        opacity: 1;
+    }
+}
+
+// --------------------------------------------------
+// CSS Gallery END
 // --------------------------------------------------
